<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>

    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>
    <string name="cancel">Cancelar</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza movida solo puede saltar única una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>

    <string name="prefLink1Title">Video Solitario Celta</string>
    <string name="prefLink1Summary">Solución al juego</string>
    <string name="prefLink1Data">https://www.youtube.com/watch?v=XsejdyCuhY8/</string>

    <string name="prefLink2Title">¡Visita la web!</string>
    <string name="prefLink2Summary">Accede a la web de MiW</string>
    <string name="prefLink2Data">http://miw.etsisi.upm.es/</string>
    <string name="delete">Borrar todo</string>

    <string name="numberTokenDefault">32</string>
    <string name="numberTokenDescription">Fichas restantes</string>

    <string name="defaultUser">Random Player</string>
    <string name="defaultUserKey">player_name</string>

    <string name="defaultColor">1</string>
    <string name="defaultColorKey">color</string>

    <string name="timeKey">time</string>

    <string name="warningTitleRecover">Se perderá la partida actual</string>
    <string name="warningMessageRecover">Perderás todo el progreso de la partida actual</string>
    <string name="saved">Guardado</string>
    <string name="recovered">Recuperada</string>
    <string name="error_game">No existe partida guardada</string>

    <string name="defaultLabelPlayer">Sin información del jugador</string>
    <string name="defaultLabelScore">0</string>
    <string name="defaultLabelTime">00:00</string>

    <string name="noScores">Sin información de jugadores</string>

</resources>