<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/prefTituloCategoria1">
        <EditTextPreference
            app:key="player_name"
            app:title="@string/prefTituloNombreJugador"
            app:summary="@string/prefTextoNombreJugador"
            android:defaultValue="Random Player"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefTituloCategoria2">
        <ListPreference
            android:title="Color de fichas"
            android:summary="Selecciona un color para las fichas"
            android:key="tokenColor"
            android:defaultValue="1"
            android:entries="@array/colorsArray"
            android:entryValues="@array/colorsValues" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefTituloCategoria3">
        <Preference
            app:title="@string/prefLink1Title"
            android:icon="@drawable/ic_youtube"
            app:summary="@string/prefLink1Summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/prefLink1Data"
                />
        </Preference>
        <Preference
            app:title="@string/prefLink2Title"
            app:icon="@mipmap/ic_miw_launcher_rounded"
            app:summary="@string/prefLink2Summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/prefLink2Data"
                />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
